# ctrmml

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README  README.md  ctrmml.c  ctrmml.h  fileio.c  fileio.h  md.c  md.h  mml.c  mml_ref.md  playback.h  playback_md.c  song.c  track.c  vgm.c  vgm.h
old/: ctrmml.c  md.c  md.h  mml.c  playback.c  playback_md.c  song.c  track.c  vgm.c
sample/: idk.mml  junkers_high.mml  midnight.mml  passport.mml  sand_light.mml
src/: conf.cpp  conf.h  core.h  driver.cpp  driver.h  input.cpp  input.h  mml_input.cpp  mml_input.h  mmlc.cpp  optimizer.cpp  optimizer.h  player.cpp  player.h  riff.cpp  riff.h  song.cpp  song.h  stringf.cpp  stringf.h  track.cpp  track.h  util.h  vgm.cpp  vgm.h  wave.cpp  wave.h
src/platform/: md.cpp  md.h  mdsdrv.cpp  mdsdrv.h  mdslink.cpp
src/unittest/: main.cpp  test_conf.cpp  test_input.cpp  test_mdsdrv.cpp  test_misc.cpp  test_mml_input.cpp  test_player.cpp  test_riff.cpp  test_song.cpp  test_track.cpp  test_vgm.cpp  åäö.txt  テスト.txt
tools/: mid2ctrmml.py  requirements.txt
